--- a/docs/part-0/02-computer-use/1-concepts.mdx
+++ b/docs/part-0/02-computer-use/1-concepts.mdx
@@ -47,32 +47,79 @@ Ok, enough talk. We need to get our hands dirty and start playing with the Termi
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
+**TODO - make sure this works**
+
 <Tabs>
   <TabItem value="pi" label="Raspberry Pi" default>
-    This is an apple 🍎
+    * If you dont have a multitool SD card, then you will need to setup an SD card first. Download the Multitool image, and use the [Pi Imager](https://www.raspberrypi.com/software/) software to install this on an SD card.
+    * Get your miltitool SD card and plug that into your pi.
+    * Connect your display to the hdmi port of your pi
+    * Connect a keyboard
+    * Plug your pi and display into power
+    * Watch it start… this will start at the terminal!
   </TabItem>
   <TabItem value="unx" label="Linux">
-    This is a banana 🍌
+    Linux variants are all based on Unit, so you have a Terminal and shells built in. Follow the instructions in the [SplashKit installer](https://splashkit.io/articles/installation/ubuntu/) to install the tools you need.
+    
+    If you are using a Linux machine already, you probably already know how to access the Terminal. If not, you should be able to find it within your application launcher.
   </TabItem>
   <TabItem value="mac" label="macOS">
-    This is an orange 🍊
+    The macOS operating system is based on Unix, so you have a Terminal and shells built in. Follow the instructions in the [SplashKit installer](https://splashkit.io/articles/installation/mac/) to install the tools you need.
+    
+    To access the Terminal, use Spotlight to search for “Terminal” and run the utility that it finds for you.
   </TabItem>
   <TabItem value="win" label="Windows">
-    This is a banana 🍌
+    Unix is the most prevalent operating system in the world, and offers an elegant and effective terminal and shell experience. If you are using a Windows machine, then we need to install the Unix tools somehow.
+    
+    There are two ways you can do this: use a virtual machine, use MSys2.
+    
+    The easy way is to download the Multitool virtual machine image. You can then launch this within VirtualBox and run this to get access to a virtual version of the multitool environment.
+    
+    *MSys2* is the alternative, and emulates the Unix environment on top of your Windows operating system. Follow the steps in the [SplashKit installer](https://splashkit.io/articles/installation/windows/). The *Msys2 Shell* is then the equivalent of Terminal on the other operating systems. You will find this in **Program Files**, **MSys2** folder.
   </TabItem>
 </Tabs>
 
 
-**ADD IMAGE**
+**ADD IMAGE(s) maybe above**
 
+At this point, you should see a “prompt” within the terminal. This is the **shell** asking you to give it an instruction. You type commands, and press Enter or Return to ask the shell to do what you has asked.
 
+Try the following:
+
+```sh
+echo “Hello `whoami`“
+```
+
+This command should output a message that says “Hello” followed by your username.
+
+If you are using the multitool setup, then plug in a speaker to the multitool and give this a try: 
+
+```sh
+espeak “Hello `whoami`, welcome to the command line!”
+```
+
+:::warn Backticks
+
+For these commands to work, make sure you are using double qutoes (“) around the text and backticks (`) not single quotes (‘) around the `whoami`. We will look at why soon.
+
+::
+
+This should get your pi to speak to you.
+
+**TODO ADD curl example**
 
  
 ## The Execution Environment
 
-Environment variables
+
 
 Standard input, output and error
+
+**ADD IMAGE - program with data for stein,out,err**
+
+Environment variables
+
+PATH
 
 ## Files and File Systems
 
