--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,17 +1,17 @@
 ---
-title: Welcome to Starlight
+title: Explore the many programming pathways ahead
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Your guide to the world of programming
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
+    - text: Access now
       link: /guides/example/
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
+    - text: Learn more about the project
       link: https://starlight.astro.build
       icon: external
 ---
