--- a/src/content/docs/book/part-0-getting-started/1-digital-realities/1-concepts/1-programs.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-digital-realities/1-concepts/1-programs.mdx
@@ -3,6 +3,7 @@ title: Programs - what are they?
 sidebar:
   label: Programs?
 ---
+import { YouTube } from 'astro-embed';
 
 Computers are everywhere, helping enhance many aspects of our lives. There are computers embedded within many everyday items, most people carry around a computer in their pocket and possibly another on their wrist, and we interact with many differents pieces of software every day.
 
@@ -10,7 +11,10 @@ Computers are everywhere, helping enhance many aspects of our lives. There are c
 
 In the video below, Steve Jobs, the co-founder of Apple, describes the computer as a tool that acts like a **bicycle for the mind**. From our perspective, this is trying to capture the role of the computer as a tool to *accelerate our thoughts and imaginations*. This sits at the root of the answer to why computers are so useful and so connected to our daily lives. If we can imagine a digital reality, with some constraints, we can create this reality within code.
 
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ob_GX50Za6c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<div class="not-content">
+  <YouTube id="ob_GX50Za6c" params="fs=1&start=25&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 Programs allow you to instruct the computer to build a reality - a conceptual model that contains the things you need to make the program do what you want. In a way, a program is a conceptual machine (a bicycle for the mind) with imaginary parts that can perform actions and interact with the real world. This conceptual machine accelerates the capability of your mind to a new level, just like a bicycle does for human movement.
 
