feat: add dynamic image swiper

--- a/src/content/docs/book/part-4-what-next/1-things-we-left-out/0-overview.mdx
+++ b/src/content/docs/book/part-4-what-next/1-things-we-left-out/0-overview.mdx
@@ -1,6 +1,11 @@
 ---
 title: Overview
 ---
+
 import MySwiper from '../../../../../components/react/myswiper.jsx'
 
-<MySwiper client:only style="height: 400px;"></MySwiper>
+<MySwiper client:only images={[
+  "/public/test.jpeg",
+  "/public/test.jpeg",
+  "/public/test.jpeg",
+]}></MySwiper>
