chore: update astro and deps

--- a/src/content/docs/book/part-4-what-next/1-things-we-left-out/0-overview.mdx
+++ b/src/content/docs/book/part-4-what-next/1-things-we-left-out/0-overview.mdx
@@ -5,7 +5,7 @@ title: Overview
 import MySwiper from '../../../../../components/react/myswiper.jsx'
 
 <MySwiper client:only images={[
-  "/public/test.jpeg",
-  "/public/test.jpeg",
-  "/public/test.jpeg",
+  "/test.jpeg",
+  "/test.jpeg",
+  "/test.jpeg",
 ]}></MySwiper>
